--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "@mui/material": "^5.8.6",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.0",
     "@mui/styles": "^5.8.6",
     "@mui/x-date-pickers": "^5.0.0-beta.0",
     "@testing-library/jest-dom": "^5.14.1",
