--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^18.0.18",
+    "@types/react-dom": "^18.0.6",
     "date-fns": "^2.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.4.2",
+    "typescript": "^4.8.3",
+    "victory": "^36.6.6",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
